--- a/versions.yml
+++ b/versions.yml
@@ -3,6 +3,26 @@ germanium:
   files:
     germaniumget/main.py: ' |___/  **VERSION$$'
 
+# #######################################################################
+# # selenium
+# #######################################################################
+
+selenium_java:
+  version: parent:../germanium-build-system/@selenium_java
+  files:
+    germaniumget/download_urls.py:
+      - /selenium-server-standalone-**VERSION**.jar"
+
+selenium_java_major:
+  version: parent:../germanium-build-system/@selenium_java_major
+  files:
+    germaniumget/download_urls.py:
+      - SELENIUM_STANDALONE_JAR_URL="http://selenium-release.storage.googleapis.com/**VERSION**/selenium-server-standalone
+
+# #######################################################################
+# # binary drivers
+# #######################################################################
+
 firefox_driver:
   version: parent:../germanium-build-system/@firefox_driver
   files:
