WIP towards gbs.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,1 @@
-colorama==0.3.7
-termcolor==1.1.0
-tqdm==4.19.5
-Jinja2==2.9.4
-requests==2.18.4
-certifi==2017.11.5
-
+_gbs/build/prepare-build2/requirements.txt
