--- a/versions.yml
+++ b/versions.yml
@@ -1,3 +1,13 @@
+version:
+  version: 1.0.0
+  files:
+    setup.py: version='**VERSION**',
+
+requirements:
+  version: $(bin/requires_versions.py)
+  files:
+    setup.py: install_requires=[**VERSION**],
+
 germanium:
   version: parent:../germanium@germanium
   files:
@@ -57,5 +67,4 @@ edgedriver_url:
   version: parent:../germanium-build-system/@edgedriver_url
   files:
     germaniumget/download_urls.py: EDGE_DRIVER_DOWNLOAD_URL="**VERSION**"
-
 
